# filepass

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  cli.py  filepass.py  fplogger.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml  publish.yml
src/filepass/: __init__.py  filepass.py  filepass_config.py
